k3-test-deploy/workout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: 82.65.97.128
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: react-app-service
                port:
                  number: 3000
